adjusted the visibility png positioning bug

--- a/Frontend/src/components/SignIn/SignIn.module.css
+++ b/Frontend/src/components/SignIn/SignIn.module.css
@@ -96,11 +96,15 @@
     border-radius: 3px;
 }
 
-/*  */
+/* targeting the div with the visibility png */
+.form div:nth-child(3) {
+    position: relative;
+}
+/* the visibility png */
 .show {
     width: 20px;
     position: absolute;
-    top: 53%;
+    bottom: 15%;
     left: 84%;
     cursor: pointer;
 }
